--- a/private.ini
+++ b/private.ini
@@ -1,6 +1,7 @@
 [DJANGO]
-SECRET_KEY="django-insecure-r4qh0kadrs*6mb1&5r=xvl(c5592g8=us250ua99a7w&iz@g&f"
-DJANGO_ALLOWED_HOSTS=localhost
+SECRET_KEY="django-insecure-generate-one-for-each-env"
+ALLOWED_HOSTS=localhost,127.0.0.1
+VERSION=1.00.00
 ENV=DEV
 
 [POSTGRES]
@@ -8,7 +9,7 @@ HOST=localhost
 PORT=5432
 NAME=django
 USER=django
-PASSWORD="django-insecure"
+PASSWORD="insecure-keep-secret"
 
 [STATIC]
 STATIC_ROOT = "/var/www/django/static"
