--- a/static/package.json
+++ b/static/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.1",
+    "icheck": "1.0.2",
     "admin-lte": "3.1.0"
   }
 }
